<resources>
    <string name="app_name">FinalProject</string>
    <string name="tv_poke_name">Bulbasuar</string>
    <string name="tv_height">0.0 m</string>
    <string name="tv_weight">0.0 kg</string>
    <string name="tv_type1">TYPE1</string>
    <string name="tv_type2">TYPE2</string>
    <string name="ph_amt">60</string>
    <string name="atk">ATK:</string>
    <string name="def">DEF:</string>
    <string name="sp_atk">SP.ATK:</string>
    <string name="sp_def">SP.DEF:</string>
    <string name="spd">SPD:</string>
    <string name="height_desc">double sided arrow for height</string>
    <string name="hp">HP:</string>
    <string name="image_of_current_pokemon">image of current pokemon</string>
    <string name="anchor_image_for_weight">anchor image for weight</string>
    <string name="background_for_cardview">background for cardview</string>
    <string name="title_activity_pokemon_details">PokemonDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>