<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDBBBB"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/view2_b"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="80dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_weight_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/iv_poke_sprite_back"
            android:layout_width="145dp"
            android:layout_height="160dp"
            android:contentDescription="@string/image_of_current_pokemon"
            android:scaleType="centerCrop"
            android:src="@drawable/stats_rectangle" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_poke_name_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_poke_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cvstats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2_b" />

    <TextView
        android:id="@+id/tv_height_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_height"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_weight_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_poke_name_b"
        app:layout_constraintTop_toTopOf="@+id/tv_weight_b" />

    <TextView
        android:id="@+id/tv_weight_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_weight"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_weight_b"
        app:layout_constraintEnd_toStartOf="@+id/tv_poke_name_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2_b" />

    <ImageView
        android:id="@+id/iv_height_b"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/height_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_poke_name_b"
        app:layout_constraintTop_toBottomOf="@+id/tv_height_b"
        app:srcCompat="@drawable/ic_height" />

    <ImageView
        android:id="@+id/iv_weight_b"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_poke_name_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weight_b"
        app:srcCompat="@drawable/ic_weight"
        android:contentDescription="@string/anchor_image_for_weight" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvstats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_weight_b"
        app:cardElevation="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_for_cardview"
            android:scaleType="fitXY"
            android:src="@drawable/stats_rectangle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:orientation="vertical"
            android:padding="8dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_type_1_b"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/type_1_rectangle"
                    android:gravity="center"
                    android:text="@string/tv_type1"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type_2_b"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/type_2_rectangle"
                    android:gravity="center"
                    android:text="@string/tv_type2"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Placeholder description of pokemon.
                 This is what the text will look like."
                android:padding="16dp"
                android:textSize="32sp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_fav2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        />

    <TextView
        android:id="@+id/tv_poke_num_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No. 1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>